okay i think i fixed my stuff now

--- a/game0/vs-2022/saucer-shoot.vcxproj
+++ b/game0/vs-2022/saucer-shoot.vcxproj
@@ -88,12 +88,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="EventKeycard.h" />
+    <ClInclude Include="Keycard.h" />
+    <ClInclude Include="Laser.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\game.cpp" />
+    <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
