--- a/game0/vs-2022/saucer-shoot.vcxproj.filters
+++ b/game0/vs-2022/saucer-shoot.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="Tile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpawnPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h" />
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpawnPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
